@@ -9,6 +9,7 @@
 	- custom toolbar replaced by qmainwidget toolbar (this allows to undock it from mainwidget and let the user move to other place
 	- qtoolbuttons replaced by qaction in qtoolbar
 	- q3listbox replaced by qlistwidget
+	- q3buttongroup replaced by qgroupbox
 
 28. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
 	- touch function of DBCatalog moved to proper place
